// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions > Analysis > Regional deleteRegionalAnalysis should work 1`] = `
Object {
  "payload": "12321a",
  "type": "delete regional analysis",
}
`;

exports[`Actions > Analysis > Regional setActiveRegionalAnalyses should work 1`] = `
Object {
  "type": "set active regional analyses",
}
`;

exports[`Actions > Analysis > Regional setMinimumImprovementProbability should work 1`] = `
Object {
  "payload": 0.42,
  "type": "set minimum improvement probability",
}
`;

exports[`Actions > Analysis > Regional setRegionalAnalyses should work 1`] = `
Object {
  "payload": Array [
    Object {
      "_id": "abcd",
      "accessGroup": "accessGroupName",
      "bounds": Object {},
      "bundleId": "5678",
      "complete": true,
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "cutoffMinutes": 60,
      "deleted": false,
      "grid": "Jobs_total",
      "height": 300,
      "name": "ANALYSIS 1",
      "nonce": "12345",
      "north": 20024,
      "projectId": "1234",
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "date": "2016-01-16",
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromTime": 25200,
        "maxRides": 4,
        "maxTripDurationMinutes": 60,
        "monteCarloDraws": 200,
        "reachabilityThreshold": 0,
        "toTime": 32400,
        "transitModes": "BUS,TRAM,RAIL,SUBWAY",
        "travelTimePercentile": 50,
        "walkSpeed": 1.3888888888888888,
      },
      "status": "DONE",
      "travelTimePercentile": -1,
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
      "variant": 0,
      "west": 20015,
      "width": 300,
      "workerVersion": "v3.2.0",
      "zoom": 9,
    },
    Object {
      "_id": "efgh",
      "accessGroup": "accessGroupName",
      "bounds": Object {},
      "bundleId": "5678",
      "complete": true,
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "cutoffMinutes": 60,
      "deleted": false,
      "grid": "Jobs_total",
      "height": 300,
      "name": "ANALYSIS 2",
      "nonce": "12345",
      "north": 20024,
      "projectId": "4321",
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "date": "2016-01-16",
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromTime": 25200,
        "maxRides": 4,
        "maxTripDurationMinutes": 60,
        "monteCarloDraws": 200,
        "reachabilityThreshold": 0,
        "toTime": 32400,
        "transitModes": "BUS,TRAM,RAIL,SUBWAY",
        "travelTimePercentile": 50,
        "walkSpeed": 1.3888888888888888,
      },
      "status": "DONE",
      "travelTimePercentile": 42,
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
      "variant": 1,
      "west": 20015,
      "width": 300,
      "workerVersion": "v3.2.0",
      "zoom": 9,
    },
  ],
  "type": "set regional analyses",
}
`;

exports[`Actions > Analysis > Regional setRegionalAnalysisGrids should work 1`] = `
Object {
  "type": "set regional analysis grids",
}
`;
